--- a/src/styles.css
+++ b/src/styles.css
@@ -1,63 +1,65 @@
-html,
-body {
-    position: relative;
-    height: 100%;
+
+*,*::after,::before{
+    box-sizing: border-box;
 }
-
 body {
-    background: #eee;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    color: #000;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-
-}
-
-._wrapper {
-    max-width: 800px;
-    height: 70vh;
-    margin: 0 auto;
-    padding: 0 10px;
+  min-height: 100vh;
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  box-sizing: border-box;
 }
 
 .swiper {
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-pagination-bullet {
-    border: 1px solid #fff;
-}
-
-.swiper-pagination-bullet-active {
-    transform: scale(1.2);
+  width: 100%;
+  height:100%;
 }
 
 .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
 
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 
 .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.wrap{
+    position: relative;
+    height: 600px;
+    width: 1400px;
+    margin:auto;
+    margin-top: 75px;  
+}
+/* custom style */
+.swiper-pagination-bullet{
+    border: 1px solid #fff;
+}
+.swiper-pagination-bullet-active{
+    transform: scale(1.3);
+}
+@media(max-width:667.998px){
+    .wrap{
+        width: 100%;
+        height:90vh;
+        margin-top:0px; 
+    }
 }
